# SPCBPT-Code

./: readme.md  readme_CN.md
src/: CMakeLists.txt  sampleConfig.h.in
src/CMake/: CompilerInfo.cmake  ConfigCompilerFlags.cmake  FindCUDA.cmake  FindDX.cmake  FindOptiX.cmake  Macros.cmake
src/CMake/FindCUDA/: run_nvcc.cmake
src/data/door/: door.scene  door_refine.scene
src/data/door/geometry2/: door.mtl  door_frame_left.mtl  door_frame_right.mtl  door_frame_top.mtl  door_hinge1.mtl  door_hinge2.mtl  door_hinge3.mtl  door_knob.mtl  floor.mtl  floor01.mtl  lamp.mtl  picture_frame.mtl  picture_image.mtl  table.mtl  table_leg1.mtl  table_leg2.mtl  table_leg3.mtl  table_leg4.mtl  teapot1.mtl  teapot2.mtl  teapot3.mtl  walls.mtl
src/device_include/: README.txt  commonStructs.h  helpers.h  intersection_refinement.h  random.h
src/optixPathTracer/: BDPT.cpp  BDPT.h  BDPTVertex.h  BDPT_STRUCT.h  BDenv_common.h  BDenv_device.h  BDenv_host.h  CMakeLists.txt  ConsoleApplication11.cpp  MLP_common.h  MLP_device.h  MLP_host.h  MyAssert.h  PG_common.h  PG_device.h  PG_host.h  Picture.cpp  Picture.h  SVM_common.h  SVM_device.h  SVM_host.h  Texture.cpp  Texture.h  ZGC.h  ZGC_common.h  ZGC_device.h  background.cu  classTree_common.h  classTree_device.h  classTree_host.h  disney.cu  frame_estimator.h  gamma_common.h  gamma_device.h  gamma_host.h  glass.cu  global_setting.h  hello_cuda.cu  hello_cuda.h  hit_program.cu  (+23 more)
src/optixPathTracer/backup/: BDPT_STRUCT - 副本.h  BDPT_STRUCT.h
src/optixPathTracer/cudaCode/: CMakeLists.txt  hello_cuda.h
src/optixPathTracer/old/: Disney1.cu  Org_diffuse.cu  diffuse.cu  disneyMaterial.h  glass.cu  phong.cu
src/support/glfw/: CMakeLists.txt
src/support/glfw/docs/html/: annotated.html  bug.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_1f12d41534b9d9c99a183e145b58d6f3.html  dir_351f617146de9499414a6c099ebbe0ca.html  dir_4bcf8e981abe5adb811ce4f57d70c9af.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  globals_defs_n.html  globals_defs_o.html  (+61 more)
src/support/glfw/docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  groups_9.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.html  pages_4.js  pages_5.html  (+14 more)
src/support/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_internal.h  stb_rect_pack.h
src/sutil/: Arcball.cpp  Arcball.h  CMakeLists.txt  Camera.cpp  Camera.h  HDRLoader.cpp  HDRLoader.h  Mesh.cpp  Mesh.h  OptiXMesh.cpp  OptiXMesh.h  PPMLoader.cpp  PPMLoader.h  SunSky.cpp  SunSky.h  phong.cu  phong.h  sutil.cpp  sutil.h  sutilapi.h  triangle_mesh.cu
src/sutil/stb/: stb_image_write.cpp  stb_image_write.h
src/sutil/tinyobjloader/: tiny_obj_loader.h
